--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry kind="lib" path="lib/opencv-sources.jar"/>
 	<classpathentry kind="lib" path="lib/opencv.jar"/>
 	<classpathentry kind="lib" path="lib/WPILib-sources.jar"/>
-	<classpathentry kind="lib" path="lib/WPILib.jar"/>
+	<classpathentry kind="lib" path="lib/WPILib.jar" sourcepath="lib/WPILib-sources.jar"/>
 	<classpathentry kind="lib" path="lib/wpiutil-sources.jar"/>
 	<classpathentry kind="lib" path="lib/wpiutil.jar"/>
 	<classpathentry kind="output" path="bin"/>
