--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/libs/RC2018rewrite.jar
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /bin/
+*.class
